--- a/META.yml
+++ b/META.yml
@@ -3,17 +3,15 @@ abstract: 'Route PSGI requests for RESTful web applications'
 author:
   - 'Jakob Voß <voss@gbv.de>'
 build_requires:
-  Data::Dumper: 0
   HTTP::Request::Common: 0
   HTTP::Status: 0
   Plack::Builder: 0
-  Plack::Request: 0
   Plack::Test: 0
   Test::More: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300018, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300023, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -21,7 +19,9 @@ meta-spec:
 name: Plack-Middleware-REST
 requires:
   Carp: 0
+  Exporter: 0
   Plack::Middleware: 0
+  Plack::Request: 0
   Plack::Util::Accessor: 0
   Scalar::Util: 0
   parent: 0
@@ -31,4 +31,4 @@ resources:
   bugtracker: https://github.com/nichtich/Plack-Middleware-REST/issues
   homepage: https://github.com/nichtich/Plack-Middleware-REST
   repository: https://github.com/nichtich/Plack-Middleware-REST.git
-version: 0.01
+version: 0.02
